welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:32: error: type mismatch;
 found   : String
 required: Int
		var mess: Int = litMessage();
                                          ^Array2:33: error: not enough arguments for method courir: (nbPas: Int)Unit.
Unspecified value parameter nbPas.
		courir()(hauteur - mess);
                      ^